# secret_key_leak

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
content/: post1-attack.md  post2-defense.md
docs/: LEARNING.md  RUN_STEPS.md  US1_AES_KEY_RECOVERY.md
docs/primer/: simple-attack-and-defense.md  simple-attack-and-defense.tex
firmware/aes-masked/: BUILD.md  Makefile  README.md  simpleserial-aes-CWNANO-masked.hex
firmware/aes-unprotected/: BUILD.md  Makefile  README.md  (+1 more)
models/: cnn_byte0.card.json  cnn_byte1.card.json  cnn_byte10.card.json  cnn_byte11.card.json  cnn_byte12.card.json  cnn_byte13.card.json  cnn_byte14.card.json  cnn_byte15.card.json  cnn_byte2.card.json  cnn_byte3.card.json  cnn_byte4.card.json  cnn_byte5.card.json  cnn_byte6.card.json  cnn_byte7.card.json  cnn_byte8.card.json  cnn_byte9.card.json
notebooks/: 00_bringup.ipynb  01_capture.ipynb  02_cpa_baseline.ipynb  03_cnn_dlsca.ipynb
notes/: approvals.md  hardware.md  requirements.lock.txt  setup-verified.md
results/: cnn_aes-masked.json  cnn_aes-unprotected.json  cpa_aes-masked.json  cpa_aes-unprotected.json  masking_verdict.json
scripts/: README.md  leak_vs_hw_figure.py  us3_attack_masked.py  us3_capture_masked.py  us3_figure.py  us3_live_roundtrip.py  us3_verdict.py
tests/: test_attack.py  test_cpa.py  test_dataset.py  test_leakage.py  test_masked_correctness.py  test_masked_safety.py  test_model.py  test_preprocess.py
traces/: masked_fixedkey.manifest.json  masked_randomkey.manifest.json  unprotected_fixedkey.manifest.json  unprotected_randomkey.manifest.json
(+15 files in other folders)
